--- a/pages/index.html
+++ b/pages/index.html
@@ -96,6 +96,44 @@
         </div>
         <div class="row row-cols-md-3 gx-md-64 gx-20 mb-64">
           <!-- whiteCoffeeCup -->
+           <div class="col">
+            <a href="#" class="text-decoration-none products-link">
+              <div class="card">
+                <!-- 商品照與底色 -->
+                <div class="w-100 ratio ratio-1x1 bg-primary-50 position-relative">
+                  <div class="heartArea">
+                    <label for="greenCoffeeCup" class="products-label">
+                      <input type="checkbox" id="greenCoffeeCup" class="productsHeart">
+                      <!-- 實心愛心 -->
+                      <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+                        class="products-heartFilled">
+                        <path
+                          d="m12.82 5.58-.82.822-.824-.824a5.375 5.375 0 1 0-7.601 7.602l7.895 7.895a.75.75 0 0 0 1.06 0l7.902-7.897a5.376 5.376 0 0 0-.001-7.599 5.38 5.38 0 0 0-7.611 0Z"
+                          fill="#5B4530" />
+                      </svg>
+                      <!-- 空心愛心 -->
+                      <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+                        class="products-heartOutlined">
+                        <path
+                          d="m12.82 5.58-.82.822-.824-.824a5.375 5.375 0 1 0-7.601 7.602l7.895 7.895a.75.75 0 0 0 1.06 0l7.902-7.897a5.376 5.376 0 0 0-.001-7.599 5.38 5.38 0 0 0-7.611 0Zm6.548 6.54L12 19.485 4.635 12.12a3.875 3.875 0 1 1 5.48-5.48l1.358 1.357a.75.75 0 0 0 1.073-.012L13.88 6.64a3.88 3.88 0 0 1 5.487 5.48Z"
+                          fill="#ADADAD" />
+                      </svg>
+                    </label>
+                  </div>
+
+                  <img src="/assets/images/productsImg/greenCoffeeCup.png"
+                    class="w-100 object-fit-cover position-absolute top-50 start-50 translate-middle pe-none"
+                    alt="...">
+                </div>
+                <div class="card-body products-bg text-center py-20 px-0">
+                  <h5 class="card-title label-small products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 深度烘焙
+                  </h5>
+                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">祕魯 薇拉瑞卡 安迪亞斯莊園</p>
+                  <p class="card-text label-medium products-label-md-large text-primary-950">$280~$600</p>
+                </div>
+              </div>
+            </a>
+          </div>
           <div class="col">
             <a href="#" class="text-decoration-none products-link">
               <div class="card">
@@ -141,44 +179,6 @@
                 <!-- 商品照與底色 -->
                 <div class="w-100 ratio ratio-1x1 bg-primary-50 position-relative">
                   <div class="heartArea">
-                    <label for="greenCoffeeCup" class="products-label">
-                      <input type="checkbox" id="greenCoffeeCup" class="productsHeart">
-                      <!-- 實心愛心 -->
-                      <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
-                        class="products-heartFilled">
-                        <path
-                          d="m12.82 5.58-.82.822-.824-.824a5.375 5.375 0 1 0-7.601 7.602l7.895 7.895a.75.75 0 0 0 1.06 0l7.902-7.897a5.376 5.376 0 0 0-.001-7.599 5.38 5.38 0 0 0-7.611 0Z"
-                          fill="#5B4530" />
-                      </svg>
-                      <!-- 空心愛心 -->
-                      <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
-                        class="products-heartOutlined">
-                        <path
-                          d="m12.82 5.58-.82.822-.824-.824a5.375 5.375 0 1 0-7.601 7.602l7.895 7.895a.75.75 0 0 0 1.06 0l7.902-7.897a5.376 5.376 0 0 0-.001-7.599 5.38 5.38 0 0 0-7.611 0Zm6.548 6.54L12 19.485 4.635 12.12a3.875 3.875 0 1 1 5.48-5.48l1.358 1.357a.75.75 0 0 0 1.073-.012L13.88 6.64a3.88 3.88 0 0 1 5.487 5.48Z"
-                          fill="#ADADAD" />
-                      </svg>
-                    </label>
-                  </div>
-
-                  <img src="/assets/images/productsImg/greenCoffeeCup.png"
-                    class="w-100 object-fit-cover position-absolute top-50 start-50 translate-middle pe-none"
-                    alt="...">
-                </div>
-                <div class="card-body products-bg text-center py-20 px-0">
-                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 深度烘焙
-                  </h5>
-                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">祕魯 薇拉瑞卡 安迪亞斯莊園</p>
-                  <p class="card-text label-medium products-label-md-large text-primary-950">$280~$600</p>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col">
-            <a href="#" class="text-decoration-none products-link">
-              <div class="card">
-                <!-- 商品照與底色 -->
-                <div class="w-100 ratio ratio-1x1 bg-primary-50 position-relative">
-                  <div class="heartArea">
                     <label for="yellowCoffeeCup" class="products-label">
                       <input type="checkbox" id="yellowCoffeeCup" class="productsHeart">
                       <!-- 實心愛心 -->
@@ -205,7 +205,7 @@
                 <div class="card-body products-bg text-center py-20 px-0">
                   <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 中度烘焙
                   </h5>
-                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">巴西 南米納斯 法罕莊園</p>
+                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">巴西 星河莊園</p>
                   <p class="card-text label-medium products-label-md-large text-primary-950">$200~$600</p>
                 </div>
               </div>
@@ -221,14 +221,14 @@
         </div>
         <div class="row row-cols-md-3 gx-md-64 gx-20 mb-64">
           <!-- whiteCoffeeCup -->
-          <div class="col">
+           <div class="col">
             <a href="#" class="text-decoration-none products-link">
               <div class="card">
                 <!-- 商品照與底色 -->
                 <div class="w-100 ratio ratio-1x1 bg-primary-50 position-relative">
                   <div class="heartArea">
-                    <label for="whiteCoffeeCup" class="products-label">
-                      <input type="checkbox" id="whiteCoffeeCup" class="productsHeart">
+                    <label for="blackCoffeeBean" class="products-label">
+                      <input type="checkbox" id="blackCoffeeBean" class="productsHeart">
                       <!-- 實心愛心 -->
                       <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
                         class="products-heartFilled">
@@ -246,16 +246,15 @@
                     </label>
                   </div>
 
-                  <img src="/assets/images/productsImg/whiteCoffeeCup.png"
+                  <img src="/assets/images/productsImg/blackCoffeeBean.png"
                     class="w-100 object-fit-cover position-absolute top-50 start-50 translate-middle pe-none"
                     alt="...">
                 </div>
                 <div class="card-body products-bg text-center py-20 px-0">
-                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 輕度烘焙
+                  <h5 class="card-title label-small products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 中度烘焙
                   </h5>
-                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">肯亞
-                    涅里區聯合處理廠</p>
-                  <p class="card-text label-medium products-label-md-large text-primary-950">$350~$600</p>
+                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">冬雪藏梅 配方</p>
+                  <p class="card-text label-medium products-label-md-large text-primary-950">$200~$600</p>
                 </div>
               </div>
             </a>
@@ -266,8 +265,8 @@
                 <!-- 商品照與底色 -->
                 <div class="w-100 ratio ratio-1x1 bg-primary-50 position-relative">
                   <div class="heartArea">
-                    <label for="greenCoffeeCup" class="products-label">
-                      <input type="checkbox" id="greenCoffeeCup" class="productsHeart">
+                    <label for="brownCoffeeBean" class="products-label">
+                      <input type="checkbox" id="brownCoffeeBean" class="productsHeart">
                       <!-- 實心愛心 -->
                       <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
                         class="products-heartFilled">
@@ -285,14 +284,14 @@
                     </label>
                   </div>
 
-                  <img src="/assets/images/productsImg/greenCoffeeCup.png"
+                  <img src="/assets/images/productsImg/brownCoffeeBean.png"
                     class="w-100 object-fit-cover position-absolute top-50 start-50 translate-middle pe-none"
                     alt="...">
                 </div>
                 <div class="card-body products-bg text-center py-20 px-0">
                   <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 深度烘焙
                   </h5>
-                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">祕魯 薇拉瑞卡 安迪亞斯莊園</p>
+                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">衣索比亞 谷吉 赫瑪聯合處理場</p>
                   <p class="card-text label-medium products-label-md-large text-primary-950">$280~$600</p>
                 </div>
               </div>
@@ -304,8 +303,8 @@
                 <!-- 商品照與底色 -->
                 <div class="w-100 ratio ratio-1x1 bg-primary-50 position-relative">
                   <div class="heartArea">
-                    <label for="yellowCoffeeCup" class="products-label">
-                      <input type="checkbox" id="yellowCoffeeCup" class="productsHeart">
+                    <label for="redCoffeeBean" class="products-label">
+                      <input type="checkbox" id="redCoffeeBean" class="productsHeart">
                       <!-- 實心愛心 -->
                       <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
                         class="products-heartFilled">
@@ -323,15 +322,15 @@
                     </label>
                   </div>
 
-                  <img src="/assets/images/productsImg/yellowCoffeeCup.png"
+                  <img src="/assets/images/productsImg/redCoffeeBean.png"
                     class="w-100 object-fit-cover position-absolute top-50 start-50 translate-middle pe-none"
                     alt="...">
                 </div>
                 <div class="card-body products-bg text-center py-20 px-0">
-                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 中度烘焙
+                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 深度烘焙
                   </h5>
-                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">巴西 南米納斯 法罕莊園</p>
-                  <p class="card-text label-medium products-label-md-large text-primary-950">$200~$600</p>
+                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">衣索比亞 西達摩 蕾羅莎處理廠</p>
+                  <p class="card-text label-medium products-label-md-large text-primary-950">$350~$600</p>
                 </div>
               </div>
             </a>
@@ -479,7 +478,6 @@
           const list = document.querySelector(".list");
           list.innerHTML += list.innerHTML; // 直接複製一份接上去
         });
-
       </Script>
 
       <%- include('./layout/js'); -%>
