--- a/explore.html
+++ b/explore.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title></title>
-  <link rel="preload" href="/fonts/ChenYuluoyan-2.0-Thin.woff2" as="font" type="font/woff2"
-    crossorigin="anonymous" fetchpriority="high" />
+  <link rel="preload" href="/fonts/ChenYuluoyan-2.0-Thin.woff2" as="font" type="font/woff2" crossorigin="anonymous"
+    fetchpriority="high" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.13.1/font/bootstrap-icons.min.css"
     rel="stylesheet">
     <script type="module" crossorigin src="/coffee/assets/main-B9oX55vN.js"></script>
@@ -136,24 +136,21 @@
           <div class="row">
             <div class="col-12 col-md-4">
               <div class="choosecard rounded" data-go="c1">
-                <img class="rounded p-8 p-md-12" src="/coffee/images/explore/explore-threeroad1.png"
-                  alt="帶有酸甜花果香味的道路" />
+                <img class="rounded p-8 p-md-12" src="/coffee/images/explore/explore-threeroad1.png" alt="帶有酸甜花果香味的道路" />
                 <p class=" p-8 p-md-12">帶有酸甜花果香味的道路</p>
               </div>
             </div>
 
             <div class="col-12 col-md-4">
               <div class="choosecard rounded" data-go="c2">
-                <img class="rounded p-8 p-md-12" src="/coffee/images/explore/explore-threeroad2.png"
-                  alt="溫和堅果巧克力味的道路" />
+                <img class="rounded p-8 p-md-12" src="/coffee/images/explore/explore-threeroad2.png" alt="溫和堅果巧克力味的道路" />
                 <p class="p-8 p-md-12">溫和堅果巧克力味的道路</p>
               </div>
             </div>
 
             <div class="col-12 col-md-4">
               <div class="choosecard rounded" data-go="c3">
-                <img class="rounded p-8 p-md-12" src="/coffee/images/explore/explore-threeroad3.png"
-                  alt="濃郁草本優雅香氣的道路" />
+                <img class="rounded p-8 p-md-12" src="/coffee/images/explore/explore-threeroad3.png" alt="濃郁草本優雅香氣的道路" />
                 <p class="p-8 p-md-12">濃郁草本優雅香氣的道路</p>
               </div>
             </div>
@@ -329,19 +326,18 @@
             </div>
             <!-- 右邊 -->
             <div class="col-12 col-md-5 x2">
-              <a href="productdetail.html">
-                <div class="rounded pb-20 position-relative productcard">
-                  <div class="hearticon">
-                    <i class="bi bi-heart cicon"></i>
-                    <i class="bi bi-heart-fill cicon d-none"></i>
-                  </div>
-                  <img class="coffee-img rounded" src="/images/explore/explore-coffee-1.png"
-                    alt="祕魯 薇拉瑞卡 安迪亞斯莊園" />
+              <div class="rounded pb-20 position-relative productcard">
+                <div class="hearticon">
+                  <i class="bi bi-heart cicon"></i>
+                  <i class="bi bi-heart-fill cicon d-none"></i>
+                </div>
+                <a href="productdetail.html"> 
+                  <img class="coffee-img rounded" src="/images/explore/explore-coffee-1.png" alt="祕魯 薇拉瑞卡 安迪亞斯莊園" />
                   <div class="coffee-type mb-8">經典咖啡豆 | 中度烘焙</div>
                   <div class="coffee-name mb-8">祕魯 薇拉瑞卡 安迪亞斯莊園</div>
                   <div class="coffee-price">$280~$600</div>
-                </div>
-              </a>
+                </a>
+              </div>
             </div>
           </div>
         </div>
