--- a/pages/index.html
+++ b/pages/index.html
@@ -82,7 +82,7 @@
               </div>
             </div>
             <div class="col-8">
-              <img src="/assets/images/index/gift box.png" alt="中秋禮盒">
+              <img src="/images/index/gift box.png" alt="中秋禮盒">
             </div>
           </div>
         </div>
@@ -125,7 +125,7 @@
                   </label>
                 </div>
   
-                <img src="/assets/images/productsImg/greenCoffeeCup.png"
+                <img src="/images/productsImg/greenCoffeeCup.png"
                   class="w-100 object-fit-cover position-absolute top-50 start-50 translate-middle pe-none" alt="...">
               </div>
               <div class="card-body products-bg text-center py-20 px-0">
@@ -163,7 +163,7 @@
                   </label>
                 </div>
   
-                <img src="/assets/images/productsImg/whiteCoffeeCup.png"
+                <img src="/images/productsImg/whiteCoffeeCup.png"
                   class="w-100 object-fit-cover position-absolute top-50 start-50 translate-middle pe-none" alt="...">
               </div>
               <div class="card-body products-bg text-center py-20 px-0">
@@ -201,7 +201,7 @@
                   </label>
                 </div>
   
-                <img src="/assets/images/productsImg/yellowCoffeeCup.png"
+                <img src="/images/productsImg/yellowCoffeeCup.png"
                   class="w-100 object-fit-cover position-absolute top-50 start-50 translate-middle pe-none" alt="...">
               </div>
               <div class="card-body products-bg text-center py-20 px-0">
@@ -248,7 +248,7 @@
                   </label>
                 </div>
   
-                <img src="/assets/images/productsImg/blackCoffeeBean.png"
+                <img src="/images/productsImg/blackCoffeeBean.png"
                   class="w-100 object-fit-cover position-absolute top-50 start-50 translate-middle pe-none" alt="...">
               </div>
               <div class="card-body products-bg text-center py-20 px-0">
@@ -285,7 +285,7 @@
                   </label>
                 </div>
   
-                <img src="/assets/images/productsImg/brownCoffeeBean.png"
+                <img src="/images/productsImg/brownCoffeeBean.png"
                   class="w-100 object-fit-cover position-absolute top-50 start-50 translate-middle pe-none" alt="...">
               </div>
               <div class="card-body products-bg text-center py-20 px-0">
@@ -323,7 +323,7 @@
                   </label>
                 </div>
   
-                <img src="/assets/images/productsImg/redCoffeeBean.png"
+                <img src="/images/productsImg/redCoffeeBean.png"
                   class="w-100 object-fit-cover position-absolute top-50 start-50 translate-middle pe-none" alt="...">
               </div>
               <div class="card-body products-bg text-center py-20 px-0">
@@ -356,16 +356,16 @@
             <div class="feedback">
               <div class="p-32">
                 <div class="d-flex align-items-center mb-12">
-                  <img class="me-12" src="/assets/images/index/feedback/Bella.png" alt="YUI">
+                  <img class="me-12" src="/images/index/feedback/Bella.png" alt="YUI">
                   <p class="label-medium ls-2 text-primary-950 mb-0">YUI</p>
                 </div>
                 <div class="d-flex align-items-center mb-12">
                   <p class="label-small ls-2 text-primary-950 me-8 mb-0">5.0</p>
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img src="/images/index/feedback/ic_star_fill.png" alt="star">
                 </div>
                 <p class="text-start paragraph-medium ls-2 text-primary-950 mb-0">
                   每一口都喝得出用心，香氣乾淨純粹，沒有多餘的雜味。這是我近期最喜歡的一間咖啡品牌，會想一直回購。</p>
@@ -374,16 +374,16 @@
             <div class="feedback">
               <div class="p-32">
                 <div class="d-flex align-items-center mb-12">
-                  <img class="me-12" src="/assets/images/index/feedback/Andy.png" alt="Marco">
+                  <img class="me-12" src="/images/index/feedback/Andy.png" alt="Marco">
                   <p class="label-medium ls-2 text-primary-950 mb-0">Marco</p>
                 </div>
                 <div class="d-flex align-items-center mb-12">
                   <p class="label-small ls-2 text-primary-950 me-8 mb-0">4.5</p>
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img src="/images/index/feedback/ic_star_fill.png" alt="star">
                 </div>
                 <p class="text-start paragraph-medium ls-2 text-primary-950 mb-0">
                   每次來這裡都能感受到良好的氛圍，咖啡的質量也很高，尤其是他們的拿鐵，絕對推薦！</p>
@@ -392,16 +392,16 @@
             <div class="feedback">
               <div class="p-32">
                 <div class="d-flex align-items-center mb-12">
-                  <img class="me-12" src="/assets/images/index/feedback/Charlie.png" alt="Sherry">
+                  <img class="me-12" src="/images/index/feedback/Charlie.png" alt="Sherry">
                   <p class="label-medium ls-2 text-primary-950 mb-0">Sherry</p>
                 </div>
                 <div class="d-flex align-items-center mb-12">
                   <p class="label-small ls-2 text-primary-950 me-8 mb-0">4.8</p>
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img src="/images/index/feedback/ic_star_fill.png" alt="star">
                 </div>
                 <p class="text-start paragraph-medium ls-2 text-primary-950 mb-0">
                   這裡的咖啡真的很有深度，豆子選擇講究，完全可以感受到烘焙師的用心，值得一試！</p>
@@ -410,15 +410,15 @@
             <div class="feedback">
               <div class="p-32">
                 <div class="d-flex align-items-center mb-12">
-                  <img class="me-12" src="/assets/images/index/feedback/man2.png" alt="Barret">
+                  <img class="me-12" src="/images/index/feedback/man2.png" alt="Barret">
                   <p class="label-medium ls-2 text-primary-950 mb-0">Barret</p>
                 </div>
                 <div class="d-flex align-items-center mb-12">
                   <p class="label-small ls-2 text-primary-950 me-8 mb-0">4.0</p>
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/images/index/feedback/ic_star_fill.png" alt="star">
                   <svg width="16" height="17" fill="#2F2119" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path
                       d="M10.788 3.103c.495-1.004 1.926-1.004 2.421 0l2.358 4.777 5.273.766c1.107.161 1.549 1.522.748 2.303l-3.816 3.72.901 5.25c.19 1.103-.968 1.944-1.959 1.424l-4.716-2.48-4.715 2.48c-.99.52-2.148-.32-1.96-1.424l.901-5.25-3.815-3.72c-.801-.78-.359-2.142.748-2.303L8.43 7.88l2.358-4.777Zm1.21.936L9.74 8.615a1.35 1.35 0 0 1-1.016.738l-5.05.734 3.654 3.562c.318.31.463.757.388 1.195l-.862 5.03 4.516-2.375a1.35 1.35 0 0 1 1.257 0l4.516 2.374-.862-5.029a1.35 1.35 0 0 1 .388-1.195l3.654-3.562-5.05-.734a1.35 1.35 0 0 1-1.016-.738l-2.259-4.576Z"
@@ -432,16 +432,16 @@
             <div class="feedback">
               <div class="p-32">
                 <div class="d-flex align-items-center mb-12">
-                  <img class="me-12" src="/assets/images/index/feedback/Ethan.png" alt="awei">
+                  <img class="me-12" src="/images/index/feedback/Ethan.png" alt="awei">
                   <p class="label-medium ls-2 text-primary-950 mb-0">awei</p>
                 </div>
                 <div class="d-flex align-items-center mb-12">
                   <p class="label-small ls-2 text-primary-950 me-8 mb-0">4.7</p>
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img src="/images/index/feedback/ic_star_fill.png" alt="star">
                 </div>
                 <p class="text-start paragraph-medium ls-2 text-primary-950 mb-0">
                   服務態度很好，咖啡的風味獨特，特別喜歡他們的季節限定飲品，每次都會有驚喜！</p>
@@ -450,16 +450,16 @@
             <div class="feedback">
               <div class="p-32">
                 <div class="d-flex align-items-center mb-12">
-                  <img class="me-12" src="/assets/images/index/feedback/man.png" alt="Hsun">
+                  <img class="me-12" src="/images/index/feedback/man.png" alt="Hsun">
                   <p class="label-medium ls-2 text-primary-950 mb-0">Hsun</p>
                 </div>
                 <div class="d-flex align-items-center mb-12">
                   <p class="label-small ls-2 text-primary-950 me-8 mb-0">5.0</p>
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img class="me-4" src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
-                  <img src="/assets/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img class="me-4" src="/images/index/feedback/ic_star_fill.png" alt="star">
+                  <img src="/images/index/feedback/ic_star_fill.png" alt="star">
                 </div>
                 <p class="text-start paragraph-medium ls-2 text-primary-950 mb-0">
                   包裝精美，咖啡豆香氣十足，出貨速度快，第一次線上訂購就很滿意，收到的時候香味撲鼻。</p>
