--- a/pages/index.html
+++ b/pages/index.html
@@ -17,12 +17,12 @@
           <div class="carousel-inner">
             <div class="carousel-item header1 active">
               <div class="text-center header1-text d-flex flex-column">
-                <div class="vertical-line1 mb-40"></div>
-                <h1 class="heading-header-title text-primary-50 mb-24">步步踏實尋好豆</h1>
-                <p class="paragraph-xxlarge text-primary-50 mb-12">從產地到杯中</p>
-                <p class="paragraph-xxlarge text-primary-50 mb-40">Sheepo Coffee 為你萃取每一口的獨特與真誠</p>
+                <div class="vertical-line1 mb-24 mb-md-40"></div>
+                <h1 class="heading-header-title text-primary-50 mb-16 mb-md-24">步步踏實尋好豆</h1>
+                <p class="paragraph-xxlarge text-primary-50 mb-4 mb-md-12">從產地到杯中</p>
+                <p class="paragraph-xxlarge text-primary-50 mb-24 mb-md-40">Sheepo Coffee 為你萃取每一口的獨特與真誠</p>
                 <a href="products.html" class="btn2 paragraph-medium ls-2">逛逛商店</a>
-                <div class="vertical-line2 mt-40 mb-12"></div>
+                <div class="vertical-line2 mt-24 mb-mt-40 mb-12"></div>
                 <svg class="mb-4" width="30" height="30" fill="none" viewBox="0 0 24 24"
                   xmlns="http://www.w3.org/2000/svg">
                   <path
@@ -34,10 +34,10 @@
             <div class="carousel-item header2">
               <div class="text-center header2-text d-flex flex-column">
                 <div class="vertical-line3 mb-40"></div>
-                <p class="heading-header-title text-primary-50 mb-24 mb-8">限時折扣</p>
-                <p class="heading-header-title text-primary-50 mb-24">全店滿千折百</p>
-                <p class="paragraph-xxlarge text-primary-50 mb-12">現在下單滿 NT$1,000 現折 NT$100</p>
-                <p class="paragraph-xxlarge text-primary-50 mb-40">把喜歡的風味一次帶回家！</p>
+                <p class="heading-header-title text-primary-50 mb-4 mb-md-8">限時折扣</p>
+                <p class="heading-header-title text-primary-50 mb-16 mb-md-24">全店滿千折百</p>
+                <p class="paragraph-xxlarge text-primary-50 mb-4 mb-md-12">現在下單滿 NT$1,000 現折 NT$100</p>
+                <p class="paragraph-xxlarge text-primary-50 mb-24 mb-md-40">把喜歡的風味一次帶回家！</p>
                 <a href="products.html" class="btn2 paragraph-medium ls-2">逛逛商店</a>
                 <div class="vertical-line2 mt-40 mb-12"></div>
                 <svg class="mb-4" width="30" height="30" fill="none" viewBox="0 0 24 24"
@@ -54,27 +54,32 @@
     <div class="index">
       <div class="container moon">
         <div class="row d-flex align-items-end">
-          <div class="vh-80 col-4 d-flex flex-column justify-content-between">
+          <div class="vh-80 col-12 col-md-7 col-lg-4 d-flex flex-column justify-content-between">
             <div class="top">
-              <p class="heading-xxxlarge text-primary-950 mb-20">中秋節</p>
-              <p class="heading-xxxlarge text-primary-950 mb-48">限定濾掛禮盒</p>
-              <div class="d-flex align-items-center">
+              <p class="heading-xxxlarge text-primary-950 mb-8 mb-md-12 mb-lg-20">中秋節</p>
+              <p class="heading-xxxlarge text-primary-950 mb-12 mb-md-32 mb-lg-48">限定濾掛禮盒</p>
+              <div class="d-flex align-items-center mb-12 mb-md-0">
                 <p class="label-large font-weight-bold ls-2 me-20 mb-0">Moon Festival Special</p>
                 <div class="horizontal-line"></div>
               </div>
             </div>
+            <div class="d-block d-md-none middle">
+              <img class="mb-16" src="/images/index/gift box sm.png" alt="中秋禮盒">
+              <p class="mb-4 paragraph-small text-primary-950 ls-2">最暖的中秋禮，是一杯為你準備的好咖啡</p>
+              <p class="mb-32 paragraph-small text-primary-950 ls-2">限定濾掛禮盒，送給最想念的那個人。</p>
+            </div>
             <div class="bottom">
-              <p class="paragraph-medium text-primary-700 ls-2 mb-8">這個中秋不只賞月，也要賞味</p>
-              <p class="paragraph-medium text-primary-700 ls-2 mb-8">送出一份不一樣的團圓滋味</p>
-              <p class="paragraph-medium text-primary-700 ls-2 mb-8">精選三款風味咖啡豆，</p>
-              <p class="paragraph-medium text-primary-700 ls-2 mb-8">陪你用香氣迎接中秋節的每一個清晨與夜晚。</p>
-              <p class="paragraph-medium text-primary-700 ls-2 mb-40">要跟大家過一個甜甜蜜蜜的中秋節！</p>
+              <p class="paragraph-medium text-primary-700 ls-2 mb-4 mb-md-8">這個中秋不只賞月，也要賞味</p>
+              <p class="paragraph-medium text-primary-700 ls-2 mb-4 mb-md-8">送出一份不一樣的團圓滋味</p>
+              <p class="paragraph-medium text-primary-700 ls-2 mb-4 mb-md-8">精選三款風味咖啡豆，</p>
+              <p class="paragraph-medium text-primary-700 ls-2 mb-4 mb-md-8">陪你用香氣迎接中秋節的每一個清晨與夜晚。</p>
+              <p class="paragraph-medium text-primary-700 ls-2 mb-20 mb-md-40">要跟大家過一個甜甜蜜蜜的中秋節！</p>
               <a href="products.html" class="btn1 paragraph-medium ls-2 d-inline-block">查看商品</a>
             </div>
           </div>
-          <div class="col-8">
-            <div class="row d-flex align-items-end">
-              <div class="col-4 d-flex flex-row-reverse">
+          <div class="col-5 col-lg-8">
+            <div class="row d-none d-sm-flex align-items-end">
+              <div class="d-none d-lg-block col-4 d-flex flex-row-reverse">
                 <div class="d-flex flex-column">
                   <span class="mb-4 paragraph-small text-primary-950 ls-2">最暖的中秋禮，</span>
                   <span class="mb-4 paragraph-small text-primary-950 ls-2">是一杯為你準備的好咖啡</span>
@@ -82,7 +87,7 @@
                   <span class="paragraph-small text-primary-950 ls-2">送給最想念的那個人。</span>
                 </div>
               </div>
-              <div class="col-8">
+              <div class="d-none d-md-block col-12 col-lg-8">
                 <img src="/images/index/gift box.png" alt="中秋禮盒">
               </div>
             </div>
@@ -92,10 +97,10 @@
     </div>
   </div>
   <div class="index2">
-      <div class="container py-120">
+      <div class="container py-40 py-md-120">
         <div class="new">
           <p class="heading-small ls-2 text-accent-300 mb-12">NEW</p>
-          <div class="title d-flex align-items-center mb-40">
+          <div class="title d-flex align-items-center mb-24 mb-md-40">
             <p class="heading-xxlarge text-primary-950 ls-2 me-20 mb-0">本月新品</p>
             <div class="horizontal-line2"></div>
           </div>
